muestro tarjetas de comics

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="resultados">
                     <!-- CARDS -->
 
-                    <div class="tarjeta-comic">
+                    <!-- <div class="tarjeta-comic">
                         <div class="contenedor-imagen-comic">
                             <img src="images/portrait_uncanny.jpg" class="imagen-comic">
                         </div>
@@ -78,7 +78,7 @@
                         <div class="contenedor-nombre-personaje">
                             <h3 class="nombre-personaje">Banshee</h3>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
                 <!-- PAGINADO -->
