armado y maquetado de info comics

--- a/index.html
+++ b/index.html
@@ -67,23 +67,12 @@
                 <p class="numero-de-resultados"> <span>48413</span>RESULTADOS</p>
                 <div class="resultados">
                     <!-- CARDS -->
-
-                    <!-- <div class="tarjeta-comic">
-                        <div class="contenedor-imagen-comic">
-                            <img src="images/portrait_uncanny.jpg" class="imagen-comic">
-                        </div>
-                        <h3 class="titulo-comic"> Superior Spider-Man Vol. 2: Otto-matic (Trade Paperback)</h3>
-                    </div>
-
-                    <div class="tarjeta-personaje">
-                        <div class="contenedor-imagen-personaje">
-                            <img src="images/portrait_uncanny (1).jpg" class="imagen-personaje">
-                        </div>
-                        <div class="contenedor-nombre-personaje">
-                            <h3 class="nombre-personaje">Banshee</h3>
-                        </div>
-                    </div> -->
-
+                </div>
+                <div class="contenedor-info-comic ocultar">
+                    <!-- INFO COMICS -->
+                </div>
+                <div class="contenedor-info-personaje ocultar">
+                    <!-- INFO PERSONAJES -->
                 </div>
                 <!-- PAGINADO -->
                 <div class="paginado">
