correcciones en estilado del numero de resultados

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div>
             <div class="contenedor-resultados">
                 <h2 class="titulo-resultados">Resultados</h2>
-                <p> <span  class="numero-de-resultados"></span>RESULTADOS</p>
+                <p class="numero-de-resultados"> <span class="contenedor-numero-de-resultados"></span>  RESULTADOS</p>
                 <div class="resultados">
                     <!-- CARDS -->
                 </div>
