--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <div class="contenedor-busqueda">
                 <div class="contenedor-input-busqueda">
                     <input type="text" placeholder="Ingresá tu búsqueda" class="input-busqueda">
+                    Privilegia el auto cierre de etiquetas como esta:
+                    <!-- <i class="fas fa-search" /> -->
                     <i class="fas fa-search"></i>
                 </div>
                 <div class="contenedor-filtros-busqueda">
